modal: rendering issue on iOS (#770)

--- a/src/scss/widgets/containers.scss
+++ b/src/scss/widgets/containers.scss
@@ -456,9 +456,11 @@
 
         > .toggle {
             --alpha-fill:var(--alpha-fill-on);
+            z-index: 1;
         }
         > label {
             color: var(--color-text-on);
+            z-index: 2;
         }
 
         z-index: 9999999999999!important;
